--- a/N64-Emu/N64-Emu.csproj
+++ b/N64-Emu/N64-Emu.csproj
@@ -36,6 +36,7 @@
     <Compile Include="VR4300.GPRegister.cs" />
     <Compile Include="VR4300.Coprocessor0.ConfigRegister.cs" />
     <Compile Include="VR4300.OpCode.cs" />
+    <Compile Include="VR4300.Coprocessor0.StatusRegister.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Documentation\" />
