--- a/N64-Emu/N64-Emu.csproj
+++ b/N64-Emu/N64-Emu.csproj
@@ -38,6 +38,7 @@
     <Compile Include="VR4300.OpCode.cs" />
     <Compile Include="VR4300.Coprocessor0.StatusRegister.cs" />
     <Compile Include="VR4300.Coprocessor0.Register.cs" />
+    <Compile Include="VR4300.Instruction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Documentation\" />
