--- a/N64-Emu/N64-Emu.csproj
+++ b/N64-Emu/N64-Emu.csproj
@@ -30,23 +30,26 @@
     <Compile Include="Program.cs" />
     <Compile Include="Nintendo64.cs" />
     <Compile Include="Cartridge.cs" />
-    <Compile Include="VR4300.cs" />
-    <Compile Include="VR4300.Coprocessor0.cs" />
-    <Compile Include="VR4300.Coprocessor0.RegisterIndex.cs" />
-    <Compile Include="VR4300.GPRegisterIndex.cs" />
-    <Compile Include="VR4300.Coprocessor0.ConfigRegister.cs" />
-    <Compile Include="VR4300.OpCode.cs" />
-    <Compile Include="VR4300.Coprocessor0.StatusRegister.cs" />
-    <Compile Include="VR4300.Coprocessor0.Register.cs" />
-    <Compile Include="VR4300.Instruction.cs" />
-    <Compile Include="RealityCoprocessor.cs" />
-    <Compile Include="RealityCoprocessor.RealitySignalProcessor.cs" />
     <Compile Include="Nintendo64.MappingEntry.cs" />
     <Compile Include="Helpers\BitHelper.cs" />
+    <Compile Include="CPU\VR4300.cs" />
+    <Compile Include="CPU\VR4300.GPRegisterIndex.cs" />
+    <Compile Include="CPU\VR4300.Instruction.cs" />
+    <Compile Include="CPU\VR4300.OpCode.cs" />
+    <Compile Include="RCP\RealityCoprocessor.cs" />
+    <Compile Include="RCP\RealityCoprocessor.RealitySignalProcessor.cs" />
+    <Compile Include="CPU\CP0\VR4300.Coprocessor0.cs" />
+    <Compile Include="CPU\CP0\VR4300.Coprocessor0.ConfigRegister.cs" />
+    <Compile Include="CPU\CP0\VR4300.Coprocessor0.Register.cs" />
+    <Compile Include="CPU\CP0\VR4300.Coprocessor0.RegisterIndex.cs" />
+    <Compile Include="CPU\CP0\VR4300.Coprocessor0.StatusRegister.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Documentation\" />
     <Folder Include="Helpers\" />
+    <Folder Include="CPU\" />
+    <Folder Include="RCP\" />
+    <Folder Include="CPU\CP0\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Documentation\U10504EJ7V0UMJ1.pdf" />
