Moved RCP interfaces inside itself.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -37,7 +37,6 @@
     <Compile Include="CPU\VR4300.Instruction.cs" />
     <Compile Include="CPU\VR4300.OpCode.cs" />
     <Compile Include="RCP\RealityCoprocessor.cs" />
-    <Compile Include="RCP\RealityCoprocessor.SignalProcessor.cs" />
     <Compile Include="CPU\CP0\VR4300.SystemControlUnit.cs" />
     <Compile Include="CPU\CP0\VR4300.SystemControlUnit.ConfigRegister.cs" />
     <Compile Include="CPU\CP0\VR4300.SystemControlUnit.Register.cs" />
@@ -45,37 +44,40 @@
     <Compile Include="CPU\CP0\VR4300.SystemControlUnit.StatusRegister.cs" />
     <Compile Include="CPU\VR4300.SpecialOpCode.cs" />
     <Compile Include="MappingEntry.cs" />
-    <Compile Include="AI\AudioInterface.cs" />
-    <Compile Include="PI\PeripheralInterface.cs" />
-    <Compile Include="PI\PeripheralInterface.StatusRegister.cs" />
-    <Compile Include="SI\SerialInterface.cs" />
-    <Compile Include="SI\SerialInterface.StatusRegister.cs" />
-    <Compile Include="VI\VideoInterface.cs" />
-    <Compile Include="VI\VideoInterface.HorizontalVideoRegister.cs" />
-    <Compile Include="PI\PeripheralInterface.Domain.cs" />
-    <Compile Include="RCP\RealityCoprocessor.DisplayProcessor.cs" />
-    <Compile Include="MI\MIPSInterface.cs" />
     <Compile Include="CPU\VR4300.RegImmOpCode.cs" />
-    <Compile Include="PI\PeripheralInterface.CICStatus.cs" />
     <Compile Include="Extensions\MappingEntryExtensions.cs" />
-    <Compile Include="RI\RDRAMInterface.cs" />
-    <Compile Include="RI\RDRAMInterface.ConfigRegister.cs" />
-    <Compile Include="RI\RDRAMInterface.ModeRegister.cs" />
-    <Compile Include="MI\MIPSInterface.InitModeRegister.cs" />
-    <Compile Include="RI\RDRAMInterface.RefreshRegister.cs" />
-    <Compile Include="Interface.cs" />
+    <Compile Include="RCP\DP\RealityCoprocessor.DisplayProcessor.cs" />
+    <Compile Include="RCP\SP\RealityCoprocessor.SignalProcessor.cs" />
+    <Compile Include="RCP\RealityCoprocessor.Interface.cs" />
+    <Compile Include="RCP\AI\RealityCoprocessor.AudioInterface.cs" />
+    <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.cs" />
+    <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.InitModeRegister.cs" />
+    <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.cs" />
+    <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.CICStatus.cs" />
+    <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.Domain.cs" />
+    <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.StatusRegister.cs" />
+    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.cs" />
+    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.ConfigRegister.cs" />
+    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.ModeRegister.cs" />
+    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.RefreshRegister.cs" />
+    <Compile Include="RCP\SI\RealityCoprocessor.SerialInterface.cs" />
+    <Compile Include="RCP\SI\RealityCoprocessor.SerialInterface.StatusRegister.cs" />
+    <Compile Include="RCP\VI\RealityCoprocessor.VideoInterface.cs" />
+    <Compile Include="RCP\VI\RealityCoprocessor.VideoInterface.HorizontalVideoRegister.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
     <Folder Include="RCP\" />
     <Folder Include="CPU\CP0\" />
-    <Folder Include="AI\" />
-    <Folder Include="PI\" />
-    <Folder Include="SI\" />
-    <Folder Include="VI\" />
-    <Folder Include="MI\" />
     <Folder Include="Extensions\" />
-    <Folder Include="RI\" />
+    <Folder Include="RCP\AI\" />
+    <Folder Include="RCP\MI\" />
+    <Folder Include="RCP\PI\" />
+    <Folder Include="RCP\RI\" />
+    <Folder Include="RCP\SI\" />
+    <Folder Include="RCP\VI\" />
+    <Folder Include="RCP\DP\" />
+    <Folder Include="RCP\SP\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
