* VR4300.Exceptions.cs: Added a custom exception.
* VR4300.cs: Fixed SLLV/SRLV not downcasting a register source.

* Debugger.InstructionFormat.cs: Added some more formatting
  exceptions.

* Program.cs:
* Cartridge.cs:
* DotN64.csproj:
* RDRAM.cs:
* PeripheralInterface.cs:
* RDRAM.ConfigIndex.cs:
* RDRAM.ConfigRegister.cs:
* PeripheralInterface.CIC.cs:
* PeripheralInterface.CICStatus.cs:
* PeripheralInterface.DeviceState.cs:
* RealityCoprocessor.RDRAMInterface.cs:
* RealityCoprocessor.PeripheralInterface.cs:

* Nintendo64.cs: Added peripherals and rewiring.

* RealityCoprocessor.PeripheralInterface.StatusRegister.cs: Moved
  write register constants to an enum, too.

* BitHelper.cs: Better method signatures.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -43,7 +43,6 @@
     <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.cs" />
     <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.InitModeRegister.cs" />
     <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.cs" />
-    <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.CICStatus.cs" />
     <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.Domain.cs" />
     <Compile Include="RCP\PI\RealityCoprocessor.PeripheralInterface.StatusRegister.cs" />
     <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.cs" />
@@ -72,8 +71,14 @@
     <Compile Include="Helpers\BitHelper.cs" />
     <Compile Include="RCP\DP\RealityCoprocessor.DisplayProcessor.StatusRegister.cs" />
     <Compile Include="RCP\SP\RealityCoprocessor.SignalProcessor.StatusRegister.cs" />
-    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.RDRAMConfigRegister.cs" />
-    <Compile Include="RCP\RI\RealityCoprocessor.RDRAMInterface.RDRAMConfigIndex.cs" />
+    <Compile Include="CPU\VR4300\VR4300.Exceptions.cs" />
+    <Compile Include="PIF\PeripheralInterface.cs" />
+    <Compile Include="PIF\PeripheralInterface.CICStatus.cs" />
+    <Compile Include="PIF\PeripheralInterface.DeviceState.cs" />
+    <Compile Include="RDRAM\RDRAM.cs" />
+    <Compile Include="RDRAM\RDRAM.ConfigIndex.cs" />
+    <Compile Include="RDRAM\RDRAM.ConfigRegister.cs" />
+    <Compile Include="PIF\PeripheralInterface.CIC.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
@@ -91,6 +96,8 @@
     <Folder Include="CPU\VR4300\CP0\" />
     <Folder Include="Diagnostics\" />
     <Folder Include="Helpers\" />
+    <Folder Include="PIF\" />
+    <Folder Include="RDRAM\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
