Coprocessor, debugger, and exception stuff.
* VR4300.SystemControlUnit.cs: Implemented coprocessor operations.

* VR4300.ExceptionProcessing.cs: More exceptions.

* VR4300.Exceptions.cs: Support coprocessor ops.

* DotN64.csproj:
* VR4300.ICoprocessor.cs:

* VR4300.Instruction.cs: Implemented IEquatable to avoid boxing in
  dictionary key comparisons.
Added COPz for coprocessor ops.

* VR4300.OpCode.cs: Proper coprocessor ops.

* VR4300.cs: Added coprocessor unit support.

* Debugger.InstructionFormat.cs: (Slightly) take into account
  coprocessor ops.

* Debugger.cs: Using an instruction cursor to avoid confusion.
Fixed a case where the debugger would run a cycle despite exiting it.
Coprocessor ops aren't properly disassembled.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -82,6 +82,7 @@
     <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.Interrupts.cs" />
     <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.CauseRegister.cs" />
     <Compile Include="CPU\VR4300\VR4300.ExceptionProcessing.cs" />
+    <Compile Include="CPU\VR4300\VR4300.ICoprocessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
