--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -83,6 +83,7 @@
     <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.CauseRegister.cs" />
     <Compile Include="CPU\VR4300\VR4300.ExceptionProcessing.cs" />
     <Compile Include="CPU\VR4300\VR4300.ICoprocessor.cs" />
+    <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.OpCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
