- Added the FPU. - Added an exception handler for the FPU. - Added constants for cartridges and fixed header properties. - PIF HLE determines the console region for the saved register that's used by the OS. - The disassembler shows CP1 opcodes.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -84,6 +84,14 @@
     <Compile Include="CPU\VR4300\VR4300.ExceptionProcessing.cs" />
     <Compile Include="CPU\VR4300\VR4300.ICoprocessor.cs" />
     <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.OpCode.cs" />
+    <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.cs" />
+    <Compile Include="PIF\PeripheralInterface.TVType.cs" />
+    <Compile Include="Cartridge.MediaFormat.cs" />
+    <Compile Include="Cartridge.CountryCode.cs" />
+    <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.OpCode.cs" />
+    <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.Register.cs" />
+    <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ImplementationRevisionRegister.cs" />
+    <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ControlStatusRegister.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
@@ -103,6 +111,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="PIF\" />
     <Folder Include="RDRAM\" />
+    <Folder Include="CPU\VR4300\CP1\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
