--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -92,6 +92,7 @@
     <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.Register.cs" />
     <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ImplementationRevisionRegister.cs" />
     <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ControlStatusRegister.cs" />
+    <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.FunctOpCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
