CPU: refactored control flow and load/store methods, added new ops.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>DotN64</RootNamespace>
     <AssemblyName>DotN64</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ReleaseVersion>0.0.0.*</ReleaseVersion>
+    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -93,6 +95,7 @@
     <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ImplementationRevisionRegister.cs" />
     <Compile Include="CPU\VR4300\CP1\VR4300.FloatingPointUnit.ControlStatusRegister.cs" />
     <Compile Include="CPU\VR4300\CP0\VR4300.SystemControlUnit.FunctOpCode.cs" />
+    <Compile Include="CPU\VR4300\VR4300.AccessSize.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
