--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3231B7B4-EFE7-469A-AD04-D75EDECE2AFE}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>DotN64</RootNamespace>
     <AssemblyName>DotN64</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -32,7 +32,6 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Nintendo64.cs" />
     <Compile Include="Cartridge.cs" />
     <Compile Include="RCP\RealityCoprocessor.cs" />
